fix video on safari

--- a/src/components/ui/BannerSection/baner.scss
+++ b/src/components/ui/BannerSection/baner.scss
@@ -14,6 +14,10 @@
       width: 100%;
       height: 100%;
     }
+
+    video::content {
+      display: none !important;
+    }
   }
 
   .links {
